tests/baselines/reference/withStatements.errors.txt
==== tests/cases/compiler/withStatements.ts (1 errors) ====
    var x = 12;
    with (x) {
          ~
!!! error TS2135: All symbols within a with block will be resolved to 'any'.
        name = 'twelve'
        id = 12
    }